@startuml

package src.world{
class Forest {
    -name : String
    #includedItem : Character
    +getName() : String
    +setIncludes(character : Character) : void
	+getIncludes() : String
	+equals() : bool
    +toString() : String
    +hashCode() : int
}
abstract class Character
{
	-name : String
	+getName() : String
	+say(type : Speech, message : String, toCharacter : Character, level : SeverityLevel) : void
    +say() : void
	+equals() : bool
    +toString() : String
    +hashCode() : int
}
class River {
    -name : String
    #conditionList : ArrayList<String>
    +say(type : Speech, message : String, toCharacter : Character, level : SeverityLevel) : void
    +say() : void
    +setCondition(description : String...) : void
    +getCondition() : String
    +equals() : bool
	+toString() : String
	+hashCode() : int
}

class Person
{
    -name : String
    +say(type : Speech, message : String, toCharacter : Character, level : SeverityLevel) : void
    +say() : void
    +look(character : Character) : void
    +listen(person : Person, isListen : Boolean) : void
    +closeEyes() : void
    +openEyes() : void
	+sit(place : String) : void
	+takePosition(description : String) : void
	+nod(level : SeverityLevel) : void
	+understand(level : UnderstandingLevel) : void
	+equals() : bool
	+toString() : String
	+hashCode() : int
}

class Sound
{
    -name : String
    #description : ArrayList<String>
    +setDescription(description : String...) : void
    +getDescription() : String
    +say(type : Speech, message : String, toCharacter : Character, level : SeverityLevel) : void
    +say() : void
    +equals() : bool
	+toString() : String
	+hashCode() : int
}

enum SeverityLevel
{
NotSeriously
Seriously
}

enum UnderstandingLevel
{
All
Nothing
}
}

package src.actions{

enum Speech
{
Tell
Ask
}

interface Talkable
{
+say(type : Speech, message : String, toCharacter : Character, level : SeverityLevel) : void
+say() : void
}

interface Perceptionable{
+look(сharacter : Character) : void
+listen(person : Person, isListen : Boolean) : void
+closeEyes() : void
+openEyes() : void
}
}
package src {
class Main
{
+main(String[]) : void
}
}


Talkable <|-- Character

Character <|-- River
Character <|-- Sound
Character <|-- Person

Perceptionable <|-- Person





@enduml